# Logtelementry

./: CHANGELOG.md  LICENSE  logementry.cabal
src/: Logementry.hs
src/lib/: Types.hs
test/: Main.hs
